objects/PrelogData__c.object
<CustomObject>
    <fields>
        <fullName>AdvertiserProduct__c</fullName>
        <label>Advertiser/Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirDate__c</fullName>
        <label>Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Archived_Date__c</fullName>
        <label>Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BreakCode__c</fullName>
        <label>Break Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Type__c</fullName>
        <label>WO Commercial Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Home__c</fullName>
        <formula>PrelogDataMirror__r.Current_Home__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <formula>if(  Schedule__r.Deal_Parent__r.Program__r.Prelog_Version__c = Version__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE( 
MOD(  AirDate__c  - DATE(1900, 1, 7), 7), 
0, &quot;7Sun&quot;, 
1, &quot;1Mon&quot;, 
2, &quot;2Tues&quot;, 
3, &quot;3Wed&quot;, 
4, &quot;4Th&quot;, 
5, &quot;5Fri&quot;, 
6, &quot;6Sat&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>800#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_of_Day__c</fullName>
        <formula>IF(LEFT( ScheduleTime__c , 2)=&quot;1:&quot;,&quot;1&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;2:&quot;,&quot;2&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;3:&quot;,&quot;3&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;4:&quot;,&quot;4&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;5:&quot;,&quot;5&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;6:&quot;,&quot;6&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;7:&quot;,&quot;7&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;8:&quot;,&quot;8&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;9:&quot;,&quot;9&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;10&quot;,&quot;10&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;11&quot;,&quot;11&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;12&quot;,&quot;12&quot;,

IF(LEFT( ScheduleTime__c , 2)=&quot;01&quot;,&quot;1&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;02&quot;,&quot;2&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;03&quot;,&quot;3&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;04&quot;,&quot;4&quot;, 
IF(LEFT( ScheduleTime__c , 2)=&quot;05&quot;,&quot;5&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;06&quot;,&quot;6&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;07&quot;,&quot;7&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;08&quot;,&quot;8&quot;,
IF(LEFT( ScheduleTime__c , 2)=&quot;09&quot;,&quot;9&quot;,

&quot;FALSE&quot;)))))))))))))))))))))

&amp;

IF( RIGHT( ScheduleTime__c ,2)=&quot;am&quot;,&quot;am&quot;, 
IF( RIGHT( ScheduleTime__c ,2)=&quot;AM&quot;,&quot;am&quot;, 
IF( RIGHT( ScheduleTime__c ,2)=&quot;pm&quot;,&quot;pm&quot;, 
IF( RIGHT( ScheduleTime__c ,2)=&quot;PM&quot;,&quot;pm&quot;, 
IF( RIGHT( ScheduleTime__c ,2)=&quot;XM&quot;,&quot;am&quot;, 
IF( RIGHT( ScheduleTime__c ,2)=&quot;xm&quot;,&quot;am&quot;, 

&quot;False&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour of Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialDescription__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <formula>PrelogDataMirror__r.Network__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderProductDescription__c</fullName>
        <label>Order Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrelogDataMirrorReference__c</fullName>
        <label>Prelog Data Mirror Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrelogDataMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prelog Data Mirror</label>
        <referenceTo>PrelogDataMirror__c</referenceTo>
        <relationshipLabel>Prelog Data</relationshipLabel>
        <relationshipName>Prelog_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prelog_Equiv_30__c</fullName>
        <formula>VALUE(ScheduleLength__c)/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CASE(ScheduleLength__c, &quot;10&quot;,10, &quot;30&quot;, 30, &quot;45&quot;, 45, &quot;60&quot;, 60, &quot;75&quot;, 75, &quot;120&quot;, 120, &quot;240&quot;, 240, &quot;300&quot;, 300, &quot;15&quot;, 15, &quot;90&quot;, 90, &quot;180&quot;, 180, 0)/30</inlineHelpText>
        <label>Prelog Equiv :30</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>PrelogDataMirror__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduleAdID__c</fullName>
        <label>Schedule Ad-ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleLength__c</fullName>
        <label>Schedule Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleTime__c</fullName>
        <label>Schedule Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>Prelog Data</relationshipLabel>
        <relationshipName>Prelog_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScribeId__c</fullName>
        <label>ScribeId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TimePeriod__c</fullName>
        <label>Time Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>CASE( 
MOD(  AirDate__c - DATE(1900, 1, 7), 7), 
0, AirDate__c - 6, 
1, AirDate__c , 
2, AirDate__c -1, 
3, AirDate__c - 2, 
4,AirDate__c - 3, 
5, AirDate__c - 4, 
6, AirDate__c - 5, DATE(2001, 1, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>uniqueprelog__c</fullName>
        <label>uniqueprelog</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Prelog Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>AirDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FIX</fullName>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule__c</field>
            <operation>equals</operation>
            <value>A-593110</value>
        </filters>
        <label>FIX</label>
    </listViews>
    <listViews>
        <fullName>ThisTV</fullName>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>AirDate__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>3/7/2016</value>
        </filters>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <filters>
            <field>Network__c</field>
            <operation>contains</operation>
            <value>ThisTV</value>
        </filters>
        <label>ThisTV</label>
    </listViews>
    <listViews>
        <fullName>Tina_Upload</fullName>
        <columns>Schedule__c</columns>
        <columns>NAME</columns>
        <columns>AdvertiserProduct__c</columns>
        <columns>AirDate__c</columns>
        <columns>ScheduleTime__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Tina</value>
        </filters>
        <label>Tina Upload</label>
    </listViews>
    <nameField>
        <displayFormat>Pre-{0000000}</displayFormat>
        <label>Prelog Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prelog Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hybrid_DR</fullName>
        <active>false</active>
        <errorConditionFormula>IF( OR(ISBLANK(Commercial_Type__c), AND(Commercial_Type__c &lt;&gt; &quot;HY&quot;, Commercial_Type__c &lt;&gt; &quot;DR&quot;)) ,FALSE, NOT(OR(
AND(Commercial_Type__c = &quot;HY&quot;,  Schedule__r.Deal_Parent__r.Commercial_Type__c = &quot;HYBRID&quot;) 
,
AND(Commercial_Type__c = &quot;DR&quot;,  Schedule__r.Deal_Parent__r.Commercial_Type__c = &quot;DR&quot;) 
)) )</errorConditionFormula>
        <errorMessage>Commercial Type does not match Salesforce. Please adjust Hybrid/DR label in WideOrbit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weeks_Must_Match</fullName>
        <active>false</active>
        <errorConditionFormula>if( Week__c &lt;&gt; Schedule__r.Week__c ,True,False)</errorConditionFormula>
        <errorMessage>The schedule you have entered matches to a different week than this record. Please find a schedule in the correct week.</errorMessage>
    </validationRules>
</CustomObject>